<resources>
    <string name="app_name" translatable="false">StoryTelling</string>
    <string name="activity_main_label" translatable="false">MainActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="success">Success</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="confirm_password_cannot_be_empty">Confirm Password cannot be empty</string>
    <string name="password_and_confirm_password_must_be_same">Password and confirm password must be same</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="permission_denied">Permission denied</string>
    <string name="capture">Capture</string>
    <string name="switch_camera">Switch camera</string>
    <string name="failed_to_start_camera">Failed to start camera</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_home">Home</string>
    <string name="title_add">New Story</string>
    <string name="title_maps">Maps</string>
    <string name="title_detail">Detail Story</string>
    <string name="retry"><u>Retry</u></string>
    <string name="timeout">Timeout</string>
    <string name="include_location">Include my location</string>
    <string name="latitude">Latitude: <b>%s</b></string>
    <string name="longitude">Longitude: <b>%s</b></string>
</resources>