<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.add.AddFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_place_holder"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/thumbnail" />

        <Button
            android:id="@+id/btn_gallery"
            style="@style/Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/gallery"
            app:layout_constraintEnd_toStartOf="@id/btn_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_thumbnail" />

        <Button
            android:id="@+id/btn_camera"
            style="@style/Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_gallery"
            app:layout_constraintTop_toTopOf="@id/btn_gallery"
            app:layout_constraintBottom_toBottomOf="@id/btn_gallery" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            android:background="@drawable/custom_edit_text"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="@id/btn_upload"
            app:layout_constraintStart_toStartOf="@id/btn_upload"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_upload"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_description" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            style="@style/ProgressBar"
            app:layout_constraintBottom_toBottomOf="@id/btn_upload"
            app:layout_constraintEnd_toEndOf="@id/btn_upload"
            app:layout_constraintStart_toStartOf="@id/btn_upload"
            app:layout_constraintTop_toTopOf="@id/btn_upload" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>